--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,17 +13,21 @@ code {
     monospace;
 }
 
+h1 {
+  margin: auto;
+}
+
 .flex-container {
   display: flex;
   width: 50%;
   margin: auto;
-  padding: 10px;
+  padding: 5px;
   justify-content: center;
 }
 
 .example-image-text {
-  font-size: 1.4em;
-  width: 25%;
+  font-size: 1.2em;
+  width: 50%;
   word-wrap: break-word;
   margin-right: 10px;
 }
